bk_ida/gccida/g0/optimize_mode_switching
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/optimize_mode_switching/src/lcm.c:1490:1: error: use of undeclared identifier 'bb_info_0'
bb_info_0 *bb_info[1]; // [rsp+30h] [rbp-E0h] 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/optimize_mode_switching/src/lcm.c:1490:12: error: use of undeclared identifier 'bb_info'
bb_info_0 *bb_info[1]; // [rsp+30h] [rbp-E0h] 
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/optimize_mode_switching/src/lcm.c:1494:1: error: use of undeclared identifier 'bb_info_0'
bb_info_0 *info; // [rsp+50h] [rbp-C0h] 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/optimize_mode_switching/src/lcm.c:1494:12: error: use of undeclared identifier 'info'
bb_info_0 *info; // [rsp+50h] [rbp-C0h] 
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/optimize_mode_switching/src/lcm.c:1497:1: error: use of undeclared identifier 'bb_info_0'
bb_info_0 *info_0; // [rsp+60h] [rbp-B0h] 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/optimize_mode_switching/src/lcm.c:1497:12: error: use of undeclared identifier 'info_0'
bb_info_0 *info_0; // [rsp+60h] [rbp-B0h] 
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/optimize_mode_switching/src/lcm.c:1529:1: error: must use 'struct' tag to refer to type 'bb_info'
bb_info[n_entities] = ( bb_info_0 *)xcalloc( ( int)n_basic_blocks, 0x10uLL); 
^
struct 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/optimize_mode_switching/src/lcm.c:1529:21: error: expected identifier or '('
bb_info[n_entities] = ( bb_info_0 *)xcalloc( ( int)n_basic_blocks, 0x10uLL); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/optimize_mode_switching/src/lcm.c:1532:22: error: use of undeclared identifier 'num_modes_1'
if ( max_num_modes < num_modes_1[e] ) 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/optimize_mode_switching/src/lcm.c:1533:17: error: use of undeclared identifier 'num_modes_1'
max_num_modes = num_modes_1[e]; 
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/optimize_mode_switching/src/lcm.c:1539:1: error: use of undeclared identifier 'transp_0'; did you mean 'transp'?
transp_0 = sbitmap_vector_alloc( n_basic_blocks, n_entities); 
^~~~~~~~
transp
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/optimize_mode_switching/src/lcm.c:889:17: note: 'transp' declared here
static sbitmap *transp;
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/optimize_mode_switching/src/lcm.c:1540:1: error: use of undeclared identifier 'comp_0'; did you mean 'comp'?
comp_0 = sbitmap_vector_alloc( n_basic_blocks, n_entities); 
^~~~~~
comp
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/optimize_mode_switching/src/lcm.c:890:17: note: 'comp' declared here
static sbitmap *comp;
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/optimize_mode_switching/src/lcm.c:1541:22: error: use of undeclared identifier 'transp_0'; did you mean 'transp'?
sbitmap_vector_ones( transp_0, n_basic_blocks); 
                     ^~~~~~~~
                     transp
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/optimize_mode_switching/src/lcm.c:889:17: note: 'transp' declared here
static sbitmap *transp;
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/optimize_mode_switching/src/lcm.c:1545:11: error: use of undeclared identifier 'num_modes_1'
no_mode = num_modes_1[e_0]; 
          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/optimize_mode_switching/src/lcm.c:1546:1: error: use of undeclared identifier 'info'
info = bb_info[j]; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/optimize_mode_switching/src/lcm.c:1546:8: error: use of undeclared identifier 'bb_info'
info = bb_info[j]; 
       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/optimize_mode_switching/src/lcm.c:1576:15: error: use of undeclared identifier 'info'; did you mean 'insn'?
add_seginfo( &info[bb], ptr); 
              ^~~~
              insn
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/optimize_mode_switching/src/lcm.c:1520:5: note: 'insn' declared here
rtx insn; // [rsp+F8h] [rbp-18h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/optimize_mode_switching/src/lcm.c:1577:1: error: use of undeclared identifier 'transp_0'; did you mean 'transp'?
transp_0[bb]->elms[( unsigned int)j >> 6] &= ~( 1LL << ( j & 0x3F)); 
^~~~~~~~
transp
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/optimize_mode_switching/src/lcm.c:889:17: note: 'transp' declared here
static sbitmap *transp;
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/optimize_mode_switching/src/lcm.c:1579:53: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( link = insn[3].fld[0].rtx; link; link = ( rtx)link[1] ) 
                                                    ^~~~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/optimize_mode_switching/src/obj/lcm.o] Error 1
